[package]
authors = ["Zeyla Hellyer <zey@zey.moe>"]
name = "lavalink-futures"
version = "0.1.0"

[dependencies]
evzht9h3nznqzwl = "~0.0.3"
futures = "~0.1"
hyper = "~0.11"
lavalink = { git = "https://github.com/serenity-rs/lavalink.rs" }
log = "~0.3"
percent-encoding = "^1.0"
serde = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
tokio-core = "~0.1"
